web-vue/k8s/web-vue-deployment.yml
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: web-vue
  labels:
    srv: web-vue
spec:
  replicas: 1
  selector:
    matchLabels:
      srv: web-vue
  template:
    metadata:
      labels:
        srv: web-vue
    spec:
      containers:
      - name: web-vue
        image: ascmn/web-vue:latest
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 1
          timeoutSeconds: 1
          periodSeconds: 1
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          timeoutSeconds: 1
          periodSeconds: 5
