web-vue/k8s/web-vue-service.yml
kind: Service
apiVersion: v1
metadata:
  name: web-vue
  labels:
    app: web-vue
spec:
  type: ClusterIP
  selector:
    app: web-vue
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
