web-vue/k8s/web-vue-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-vue-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: ${DOMAIN}
    http:
      paths:
      - path: /
        backend:
          serviceName: web-vue
          servicePort: 80
